# doget

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
doget/: __init__.py  __main__.py
