[project]
name = "doget"
version = "0.1.0"
description = "Generate the files list as html of layers for one docker or ollama image"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.32.5",
]

[project.scripts]
doget = "doget.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
